--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ body {
     </nav>
 
     <h1>Ласкаво просимо на наш сайт!</h1> 
-<h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2><left>
+<h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
+<right>
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
 <script type="text/javascript">
@@ -91,7 +92,7 @@ MRP.insert({
 'height':150
 });
 </script>
-</left>
+</right>
 <iframe src="https://discord.com/widget?id=1118955481973669899&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
 
