--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
     <nav>
         <!-- Кнопки навігації -->
         <ul>
-            <li><a href="home.html">|Головна|</a></li>
+            <li><a href="index.html">|Головна|</a></li>
             <li><a href="about.html">|Про нас|</a></li>
             <li><a href="services.html">|Ігровий куточок|</a></li>
             <li><a href="contact.html">|Контакти|</a></li>
