--- a/index.html
+++ b/index.html
@@ -49,26 +49,10 @@
             margin: 0 auto;
         }
 
-        / Оновлені стилі /
-        body {
-            background-image: url(space.jpg);
-            color: white;
-        }
-        
-        / Мобільні стилі /
-        @media only screen and (max-width: 600px) {
-            header {
-                padding: 10px;
-            }
-
-            nav {
-                padding: 5px;
-            }
-
-            h1 {
-                padding: 20px;
-            }
-        }
+        /* Оновлені стилі */
+body {
+    background-image: url(space.jpg);
+    color: white;
     </style>
 </head>
 <body>
@@ -83,31 +67,33 @@
         <ul>
             <li><a href="index.html">|Головна|</a></li>
             <li><a href="about.html">|Про нас|</a></li>
-            <li><a href="games.html">|Ігровий куточок|</a></li>
+            <li><a href="services.html">|Ігровий куточок|</a></li>
             <li><a href="contact.html">|Контакти|</a></li>
         </ul>
     </nav>
 
     <h1>Ласкаво просимо на наш сайт!</h1> 
-    <h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
-    <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
-    <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
-    <script type="text/javascript">
-    MRP.insert({
-    'url':'http://188.40.97.185:8179/stream',
-    'codec':'mp3',
-    'volume':100,
-    'autoplay':true,
-    'jsevents':true,
-    'buffering':0,
-    'title':'Syntwave city Fm',
-    'wmode':'transparent',
-    'skin':'retromaticsmall',
-    'width':298,
-    'height':150
-    });
-    </script>
-    <iframe src="https://discord.com/widget?id=1118955481973669899&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
+<!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
+<script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
+<script type="text/javascript">
+MRP.insert({
+'url':'http://188.40.97.185:8179/stream',
+'codec':'mp3',
+'volume':100,
+'autoplay':true,
+'jsevents':true,
+'buffering':0,
+'title':'Syntwave city Fm',
+'wmode':'transparent',
+'skin':'retromaticsmall',
+'width':298,
+'height':150
+});
+</script>
+<iframe src="https://discord.com/widget?id=1118955481973669899&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
+
 
     <!-- Зміст сторінки -->
 
