--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
         <ul>
             <li><a href="index.html">|Головна|</a></li>
             <li><a href="about.html">|Про нас|</a></li>
-            <li><a href="services.html">|Ігровий куточок|</a></li>
+            <li><a href="games.html">|Ігровий куточок|</a></li>
             <li><a href="contact.html">|Контакти|</a></li>
         </ul>
     </nav>
