--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ body {
     color: white;
     </style>
 </head>
+    <audio autoplay>
+  <source src="GPV_Startup.ogg" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <body>
 
     <header>
