--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ MRP.insert({
 'url':'http://188.40.97.185:8179/stream',
 'codec':'mp3',
 'volume':100,
-'autoplay':true,
+'autoplay':false,
 'jsevents':true,
 'buffering':0,
 'title':'Syntwave city Fm',
