--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ body {
 
     <h1>Ласкаво просимо на наш сайт!</h1> 
 <h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
+<h2>З ДНЕМ НАРОДЖЕННЯ ЛЕГЕНДО....</h2>
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
 <script type="text/javascript">
