--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ body {
     <h1>Ласкаво просимо на наш сайт!</h1> 
 <h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
 <h2>З ДНЕМ НАРОДЖЕННЯ ЛЕГЕНДО....</h2>
+    <center><video src="billy.mp4"></video></center>
+
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
 <script type="text/javascript">
