--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
     <h1>Ласкаво просимо на наш сайт!</h1> 
 <h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
 <center><h2>З ДНЕМ НАРОДЖЕННЯ ЛЕГЕНДО....</h2></center>
-    <center><video src="billy.mp4"></video></center>
+    <center><video src="billy.mp4"  controls></video></center>
 
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
