--- a/games.html
+++ b/games.html
@@ -59,7 +59,7 @@ body {
 
     <header>
         <!-- Графічний логотип сайту -->
-        <img src="gpv.png" alt="Логотип сайту">
+        <img src="games.png" alt="Логотип сайту">
     </header>
 
     <nav>
