--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ body {
 
     <h1>Ласкаво просимо на наш сайт!</h1> 
 <h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
-<center><h2>З ДНЕМ НАРОДЖЕННЯ ЛЕГЕНДО....</h2></center>
-    <center><video src="billy.mp4"  controls></video></center>
+<center><h2>З Пісня "Не Гачіст" від FunnyBunny новий гачі хіт!?</h2></center>
+    <center><video src="FunnyBunny.mp4"  controls></video></center>
 
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
 <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
