--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
 
     <h1>Ласкаво просимо на наш сайт!</h1> 
 <h2>Офіційний сайт спільноти ГПВ! тут ви побачите наші контакти, зможете прочитати історію ГПВ та багато іншого!</h2>
-<center><h2>З Пісня "Не Гачіст" від FunnyBunny новий гачі хіт!?</h2></center>
+<center><h2> Пісня "Не Гачіст" від FunnyBunny новий гачі хіт!?</h2></center>
     <center><video src="FunnyBunny.mp4"  controls></video></center>
 
 <!-- BEGINS: AUTO-GENERATED MUSES RADIO PLAYER CODE -->
