--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,7 @@ body {
     </nav>
 
 
-<h1><a href="https://discord.gg/gkn3fkqQnv">діскорд</a>
-<h1><a href="https://t.me/+iHec4XdzAuBlMDYy">телеграм</a>
+<h1><a href="https://discord.gg/WTM9j7M7m6">діскорд</a>
 
 
 
